spacing and temp fix for footer

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,8 @@
 }
 
 @media (min-width: 900px) {
+    .row-cust { width: 100%; display: table; table-layout: fixed; }
+    .col-cust { display: table-cell; }
     .row { width: 100%; display: table; table-layout: fixed; }
     .col { display: table-cell; }
 }
@@ -63,6 +65,10 @@ footer div div p{
         width: 100%;
         float: none;
     }
+
+    footer{
+        height: 140px;
+    }
 }
 
 html {
@@ -87,7 +93,7 @@ h1 {
     background-size: cover;
     font-size: 50px;
     height:50vh;
-    width: 100vw;
+    width: 100%;
 }
 
 
@@ -131,7 +137,6 @@ h1 {
     font-size: 50px;
     padding: 30px 0px 30px 0px;
     background-color: #8effa7;
-    width: 100vw;
 }
 
 .sel:hover{
@@ -209,14 +214,12 @@ p{
 } */
 
 #vid{
-    background-color: rgb(39, 138, 196);
     height: 
 }
 .cont{
-    text-align: center;
-    background-color: rgb(39, 138, 196);
-    color: white;
-    padding: 13px 20px 20px 20px;
+    padding: 2.5vw;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
 }
 
 #donations{
@@ -255,13 +258,14 @@ nav{
 }
 
 svg{
-    fill: white;
+    fill: black;
 }
 
 footer{
     width: 100%;
     background-color: #17202A;
     padding: 1.5%;
+    margin-bottom: 0!important;
 }
 .navbar-toggler{
     border: none!important;
@@ -288,6 +292,7 @@ footer{
         position: relative;
         right: auto;
     }
+    
 }
 
 @media screen and (max-width: 1150px) {
@@ -305,11 +310,12 @@ footer{
         right: 0;
     }
 }
-
-
+footer div div{
+    vertical-align: middle;
+}
 
 footer div div p{
-    margin-bottom: 0;
+    line-height: 1;
 }
 
 #logo img{
